@@ -18,6 +18,7 @@ RadioCommands.swift - changed startOffset to startCalibration, corrected setter
 Radio.swift - changed _calFreq to be in Hz (not MHz)
 ProfileCommands.swift - corrected profileCmd(_:) and var selection
 RadioCommands.swift - renamed radioStaticCmd(_:_:_:) to staticNetParamsSet(callback:)
+TcpManager.swift - protected var _isWan from potential race condition
 
 v2.1.1
 
